cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Launch an EC2 instance and run a Dockerized app using UserData

Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow 22, 3000 and 8080
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0d03cb826412c6b0f            
      InstanceType: t2.micro
      KeyName: mumbai-key              
      SecurityGroupIds:
        - !Ref MySecurityGroup       
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo dnf install -y git
          mkdir -p /home/ec2-user/project
          git clone https://github.com/Samyukth-Suresh/sam-project.git /home/ec2-user/project
          sudo dnf install -y docker
          sudo systemctl enable docker
          sudo systemctl start docker
          sudo usermod -aG docker ec2-user
          sudo mkdir -p /usr/libexec/docker/cli-plugins
          sudo curl -SL https://github.com/docker/compose/releases/download/v2.27.1/docker-compose-linux-x86_64 -o /usr/libexec/docker/cli-plugins/docker-compose
          sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose
          cd /home/ec2-user/project
          sudo docker compose up -d

      Tags:
        - Key: Name
          Value: log-in-Server
